--- a/Project/Packages/manifest.json
+++ b/Project/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "3.0.5",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.3.0",
-    "com.unity.ml-agents": "file:../../com.unity.ml-agents",
+    "com.unity.ml-agents": "2.3.0-exp.3",
     "com.unity.ml-agents.extensions": "file:../../com.unity.ml-agents.extensions",
     "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.test-framework": "1.1.29",
